add stats controller
